unpackaged/main/default/objects/Exploratory_Session__c/Exploratory_Session__c.object-meta.xml
<CustomObject>
    <description>A tester-owned exploratory testing session: charter, optional timebox, running notes, Active/Completed lifecycle. Cycled sessions are team-visible (cycle audience reads them); standalone (blank cycle) sessions are personal — owner-or-admin only. Public Read/Write: audience/ownership gating is enforced in Apex (UatAudienceService), matching Test_Execution__c&#39;s posture — the DB is open, Apex is the boundary.</description>
    <label>Exploratory Session</label>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>Exploratory Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exploratory Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>