unpackaged/main/default/objects/Exploratory_Session__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>The optional one-liner a tester gives when starting an ad-hoc session - &#39;what are you looking at?&#39;. Relabelled 2026-08-06 away from QA framing; it is the only scoping question asked at creation now that Charter__c is retired.</description>
    <label>What Are You Looking At?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>