unpackaged/main/default/objects/Exploratory_Session__c/fields/Charter__c.field-meta.xml
<CustomField>
    <fullName>Charter__c</fullName>
    <description>DEPRECATED 2026-08-06 - exploratory-testing ceremony that business testers were required to fill in before they could start. No longer authored or required (its validation rule is deleted); Area__c carries the optional one-liner instead. Kept so the existing sessions keep their text.</description>
    <label>Charter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>