unpackaged/main/default/objects/Exploratory_Session__c/fields/Finished_At__c.field-meta.xml
<CustomField>
    <fullName>Finished_At__c</fullName>
    <description>Stamped System.now() by UatSessionController.finishSession. Blank while Active.</description>
    <label>Finished At</label>
    <type>DateTime</type>
</CustomField>