unpackaged/main/default/objects/Exploratory_Session__c/fields/Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Session_Notes__c</fullName>
    <description>DEPRECATED 2026-08-06 - superseded by the Session_Note__c timeline. Was one 32k blob with no structure, so nothing could attach evidence to a moment or be promoted to a finding. Each non-blank value migrated to a single Session_Note__c entry back-dated to the session&#39;s start. Kept for rollback; no longer read or written.</description>
    <label>Session Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>