unpackaged/main/default/objects/Exploratory_Session__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>Stamped System.now() by UatSessionController.startSession.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>