unpackaged/main/default/objects/Exploratory_Session__c/fields/Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Nullable: blank = standalone session outside any cycle, personal to its Tester (owner-or-admin on every read/write path). Cycled sessions are team-visible via the cycle audience; Apex enforces owner-or-admin on writes. Restricted delete: UatCycleAdminController.deleteCycle purges a cycle&#39;s sessions explicitly — SetNull would silently relabel deleted-cycle history as &quot;Standalone&quot;.</description>
    <label>Test Cycle</label>
    <referenceTo>Test_Cycle__c</referenceTo>
    <relationshipLabel>Exploratory Sessions</relationshipLabel>
    <relationshipName>Exploratory_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>