unpackaged/main/default/objects/Exploratory_Session__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who owns this session — the ownership anchor for edit/finish rights (master-detail children have no OwnerId). SetNull, never Restrict, on User lookups.</description>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Exploratory Sessions</relationshipLabel>
    <relationshipName>Exploratory_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>