unpackaged/main/default/objects/Exploratory_Session__c/fields/Timebox_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Timebox_Minutes__c</fullName>
    <description>Optional planned session length in minutes. Display-only: the workspace shows elapsed/remaining and flips to &quot;Timebox elapsed&quot; — nothing blocks or auto-finishes at expiry.</description>
    <label>Timebox (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>