unpackaged/main/default/objects/Exploratory_Session__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The session&#39;s human name (the Name field is the ES-# autonumber). Required — so no FLS entries anywhere.</description>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>