unpackaged/main/default/objects/Exploratory_Session__c/validationRules/Timebox_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Timebox_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Timebox_Minutes__c)), Timebox_Minutes__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Timebox_Minutes__c</errorDisplayField>
    <errorMessage>Timebox must be a positive number of minutes.</errorMessage>
</ValidationRule>